--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ input {
 
 html {
   font-family: Microsoft JhengHei;
-  background: #07070e;
+  background: #060f16;
   min-width: 1200px;
   height: 100%;
   overflow: hidden;
@@ -78,6 +78,21 @@ main article {
   position: relative;
   width: 1000px;
   margin: 0 auto;
+}
+main article .logo {
+  position: absolute;
+  background: url(../images/logo.png) no-repeat top center;
+  background-size: 100%;
+  width: 373px;
+  height: 247px;
+  margin: 31px 0 0 0;
+}
+main article .login {
+  position: absolute;
+  width: 364px;
+  height: 248px;
+  background-color: #fff;
+  margin: 31px 0 0 0;
 }
 main article .image {
   position: absolute;
