--- a/css/main.scss
+++ b/css/main.scss
@@ -2,7 +2,7 @@
 
 html {
     font-family: Microsoft JhengHei;
-    background: #07070e;
+    background: #060f16;
     min-width: 1200px;
     height: 100%;
     overflow: hidden;
@@ -24,6 +24,21 @@ main {
         position: relative;
         width: 1000px;
         margin: 0 auto;
+        .logo {
+            position: absolute;
+            background: url(../images/logo.png) no-repeat top center;
+            background-size: 100%;
+            width: 373px;
+            height: 247px;
+            margin: 31px 0 0 0;
+        }
+        .login {
+            position: absolute;
+            width: 364px;
+            height: 248px;
+            background-color: #fff;
+            margin: 31px 0 0 0;
+        }
         .image {
             position: absolute;
             background: url(../images/image.png) no-repeat top center;
