--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,17 @@
 @import "_reset_css.scss";
 
+@mixin clearfix {
+    &:after,
+    &:before {
+        content: "";
+        display: table;
+    }
+    &:after {
+        clear: both;
+    }
+    *zoom: 1;
+}
+
 html {
     font-family: Microsoft JhengHei;
     background: #060f16;
@@ -30,14 +42,132 @@ main {
             background-size: 100%;
             width: 373px;
             height: 247px;
-            margin: 31px 0 0 0;
+            top: 31px;
+            left: 0;
         }
         .login {
             position: absolute;
             width: 364px;
             height: 248px;
-            background-color: #fff;
-            margin: 31px 0 0 0;
+            top: 270px;
+            left: -37px;
+            .t {
+                width: 100%;
+                height: 52px;
+                margin: 0 0 33px 0;
+                .n,
+                .o {
+                    float: left;
+                    width: 171px;
+                    height: 50px;
+                    line-height: 50px;
+                    text-align: center;
+                    font-size: 20px;
+                    font-weight: bold;
+                    color: #fff;
+                    cursor: pointer;
+                    border-radius: 25px;
+                    border: 1px solid #b3aa9b;
+                    box-shadow: 0px 10px 10px -5px #000;
+                    background: #5a3f0f;
+                    background: linear-gradient(
+                        to top,
+                        #d9c39a 0%,
+                        #5a3f0f 9%,
+                        #dbc89e 17%,
+                        #9a7e52 26%,
+                        #1b0a00 41%,
+                        #9a7e52 70%,
+                        #fff2d6 85%,
+                        #9a7e52 100%
+                    );
+                    &:hover,
+                    &:active,
+                    &.active {
+                        border: 1px solid #4ea353;
+                        background: linear-gradient(
+                            to top,
+                            #a6ffa6 0%,
+                            #7cff79 16%,
+                            #009800 43%,
+                            #0a6800 61%,
+                            #0b5b0f 84%,
+                            #0a6800 93%,
+                            #002d02 100%
+                        );
+                    }
+                }
+                .n {
+                    margin: 0 18px 0 0;
+                }
+            }
+            .m {
+                width: 341px;
+                height: 81px;
+                margin: 0 auto 22px auto;
+                .mt,
+                .mb {
+                    width: 100%;
+                    height: 34px;
+                    line-height: 34px;
+                    font-size: 20px;
+                    color: #fff;
+                    input {
+                        background: #090909;
+                        border: 1px solid #ffda59;
+                        width: 270px;
+                        height: 32px;
+                        margin: 0 0 0 14px;
+                        padding: 0 5px;
+                        outline: none;
+                    }
+                }
+                .mt {
+                    margin: 0 0 13px 0;
+                }
+            }
+            .b {
+                width: 341px;
+                height: 60px;
+                text-align: center;
+                line-height: 60px;
+                font-size: 20px;
+                font-weight: bold;
+                color: #fff;
+                margin: 0 auto;
+                cursor: pointer;
+                border-radius: 5px 5px 31px 31px;
+                border: 1px solid #b3aa9b;
+                box-shadow: 0px 10px 10px -5px #000;
+                background: #5a3f0f;
+                background: linear-gradient(
+                    to top,
+                    #d9c39a 0%,
+                    #5a3f0f 9%,
+                    #dbc89e 17%,
+                    #9a7e52 26%,
+                    #1b0a00 41%,
+                    #9a7e52 70%,
+                    #fff2d6 85%,
+                    #9a7e52 100%
+                );
+                &:hover,
+                &:active,
+                &.active {
+                    border: 1px solid #9f895c;
+                    background: #5a3f0f;
+                    background: linear-gradient(
+                        to top,
+                        #fff2d6 0%,
+                        #dbc89e 14%,
+                        #9a7e52 37%,
+                        #5a3f0f 64%,
+                        #4a3207 80%,
+                        #634311 93%,
+                        #1b0a00 100%
+                    );
+                }
+            }
         }
         .image {
             position: absolute;
@@ -45,7 +175,7 @@ main {
             background-size: 100%;
             width: 963px;
             height: 981px;
-            margin: -107px 0 0 265px;
+            margin: -104px 0 0 277px;
         }
     }
     .bg {
