--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ main article .login .m {
 }
 main article .login .m .mt,
 main article .login .m .mb {
-  width: 100%;
+  width: 341px;
   height: 34px;
   line-height: 34px;
   font-size: 20px;
