--- a/css/main.scss
+++ b/css/main.scss
@@ -108,7 +108,7 @@ main {
                 margin: 0 auto 22px auto;
                 .mt,
                 .mb {
-                    width: 100%;
+                    width: 341px;
                     height: 34px;
                     line-height: 34px;
                     font-size: 20px;
