--- a/css/main.scss
+++ b/css/main.scss
@@ -118,7 +118,7 @@ main {
                         border: 1px solid #ffda59;
                         width: 270px;
                         height: 32px;
-                        margin: 0 0 0 14px;
+                        // margin: 0 0 0 14px;
                         padding: 0 5px;
                         outline: none;
                     }
