--- a/css/main.scss
+++ b/css/main.scss
@@ -18,12 +18,12 @@ html {
     min-width: 1200px;
     height: 100%;
     overflow: hidden;
-    // @supports (-webkit-touch-callout: none) {
-    //     position: relative;
-    //     transform: scale(0.9);
-    //     left: -10%;
-    //     margin: -9% 0 0 0;
-    // }
+    @supports (-webkit-touch-callout: none) {
+        position: relative;
+        transform: scale(0.9);
+        left: -10%;
+        margin: -9% 0 0 0;
+    }
 }
 
 main {
@@ -118,7 +118,10 @@ main {
                         border: 1px solid #ffda59;
                         width: 270px;
                         height: 32px;
-                        // margin: 0 0 0 14px;
+                        margin: 0 0 0 14px;
+                        @supports (-webkit-touch-callout: none) {
+                            margin: 0 0 0 5px;
+                        }
                         padding: 0 5px;
                         outline: none;
                     }
