--- a/css/main.scss
+++ b/css/main.scss
@@ -19,10 +19,10 @@ html {
     height: 100%;
     overflow: hidden;
     @supports (-webkit-touch-callout: none) {
-        position: relative;
+        position: absolute;
         transform: scale(0.9);
-        left: -10%;
-        margin: -9% 0 0 0;
+        top: -10%;
+        left: -14%;
     }
 }
 
