--- a/css/main.scss
+++ b/css/main.scss
@@ -180,6 +180,8 @@ main {
             width: 963px;
             height: 981px;
             margin: -104px 0 0 277px;
+            animation: bounceInRight;
+            animation-duration: 1s;
         }
     }
     .bg {
